--- a/app/src/main/res/layout/paypwd_modifypwd_act.xml
+++ b/app/src/main/res/layout/paypwd_modifypwd_act.xml
@@ -3,41 +3,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@drawable/bg_mcht"
     android:gravity="center_horizontal">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:orientation="vertical"
-        android:gravity="center"
-        android:layout_weight="2"
-        android:visibility="gone"
-        >
-       <!-- <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@mipmap/newpay_logo"
-            android:id="@+id/img_logo"
-            />
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center"
-            >
-            <TextView
-                style="@style/textWhiteLable.Small"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="欢迎来到 "
-                />
-            <TextView
-                style="@style/textWhite"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="新生支付"
-                />
-        </LinearLayout>-->
-    </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -59,16 +27,14 @@
                 style="@style/textWhiteSub"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="用户名："
+                android:text="旧密码："
                 />
             <EditText
-                android:id="@+id/edt_name"
+                android:id="@+id/edt_pwd_old"
                 style="@style/editTextStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:maxLength="11"
-                android:inputType="number"
-                android:digits="@string/digits_number" />
+                android:maxLength="6"/>
         </LinearLayout>
         <LinearLayout
             android:paddingBottom="@dimen/dpx016"
@@ -81,14 +47,14 @@
                 style="@style/textWhiteSub"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="密　码："
+                android:text="新密码："
                 />
             <EditText
                 android:id="@+id/edt_pwd"
                 style="@style/editTextStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:maxLength="16"/>
+                android:maxLength="6"/>
         </LinearLayout>
         <LinearLayout
             android:paddingBottom="@dimen/dpx016"
@@ -108,7 +74,7 @@
                 style="@style/editTextStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:maxLength="16"/>
+                android:maxLength="6"/>
         </LinearLayout>
         <LinearLayout
             android:id="@+id/ly_verifyCode"
@@ -150,7 +116,7 @@
             style="@style/btnStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="找回密码"
+            android:text="修改支付密码"
             />
     </LinearLayout>
 </LinearLayout>
