--- a/baseappresource/src/main/res/values/styles.xml
+++ b/baseappresource/src/main/res/values/styles.xml
@@ -29,7 +29,7 @@
     <!--</style>-->
     <style name="editTextStyle">
         <item name="android:textColor">@color/text_white_sub</item>
-        <item name="android:textColorHint">@color/text_lable</item>
+        <item name="android:textColorHint">@color/text_white_lable</item>
         <item name="android:paddingLeft">@dimen/dpx010</item>
         <item name="android:paddingRight">@dimen/dpx010</item>
         <item name="android:layout_width">match_parent</item>
@@ -37,6 +37,17 @@
         <item name="android:gravity">center_vertical</item>
         <item name="android:textSize">@dimen/textNormal</item>
         <item name="android:background">@drawable/bg_edittext</item>
+    </style>
+    <style name="editTextStyleBlcak">
+        <item name="android:textColor">@color/text_sub</item>
+        <item name="android:textColorHint">@color/text_lable</item>
+        <item name="android:paddingLeft">@dimen/dpx010</item>
+        <item name="android:paddingRight">@dimen/dpx010</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:textSize">@dimen/textNormal</item>
+        <item name="android:background">@drawable/bg_edittext_black</item>
     </style>
 
     <style name="btnStyle">
