--- a/app/src/main/res/layout/lockscreen_lay.xml
+++ b/app/src/main/res/layout/lockscreen_lay.xml
@@ -13,18 +13,38 @@
        android:id="@+id/container_fragment"
        >
    </FrameLayout>
-   <TextView
-       android:id="@+id/text_change"
-       style="@style/textSub"
-       android:text="切换为指纹验证"
-       android:layout_gravity="center_horizontal|bottom"
-       android:layout_width="wrap_content"
+   <LinearLayout
+       android:layout_width="match_parent"
        android:layout_height="wrap_content"
-       android:padding="@dimen/dpx010"
+       android:orientation="vertical"
+       android:gravity="center_horizontal"
        android:layout_marginBottom="@dimen/dpx100"
-       android:layout_alignParentBottom="true"
-       android:layout_centerHorizontal="true"
-       />
+       android:layout_gravity="center_horizontal|bottom"
+       >
+      <TextView
+          android:id="@+id/text_change"
+          style="@style/textSub"
+          android:text="切换为指纹验证"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:padding="@dimen/dpx010"
+          />
+      <LinearLayout
+
+          android:layout_width="match_parent"
+          android:gravity="right"
+          android:layout_height="wrap_content">
+         <TextView
+             android:id="@+id/text_verify"
+             style="@style/textLable.Small"
+             android:text="验证密码，清除解锁设置"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:padding="@dimen/dpx010"
+             />
+      </LinearLayout>
+   </LinearLayout>
+
 
 
 </FrameLayout>
