交易记录查询。

--- a/baseappresource/src/main/res/values/dimens.xml
+++ b/baseappresource/src/main/res/values/dimens.xml
@@ -52,6 +52,7 @@
     <dimen name="dpx140">70dip</dimen>
     <dimen name="dpx160">80dip</dimen>
     <dimen name="dpx240">120dip</dimen>
+    <dimen name="dpx300">150dip</dimen>
     <dimen name="dpx320">160dip</dimen>
     <dimen name="dpx400">200dip</dimen>
     <dimen name="dpx600">300dip</dimen>
