--- a/app/src/main/res/layout/repayment_orders_lay.xml
+++ b/app/src/main/res/layout/repayment_orders_lay.xml
@@ -7,7 +7,6 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -16,7 +15,7 @@
             android:gravity="center"
             >
             <LinearLayout
-                android:id="@+id/ly_query_bankcard"
+                android:id="@+id/ly_query_transType"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
@@ -26,8 +25,35 @@
                 <TextView style="@style/text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:paddingRight="@dimen/dpx016"
-                    android:text="卡号"
+                    android:paddingRight="@dimen/dpx006"
+                    android:text="交易类型"
+                    />
+                <ImageView
+                    android:layout_width="@dimen/dpx016"
+                    android:layout_height="@dimen/dpx012"
+                    android:src="@mipmap/mcht_spinner_down" />
+            </LinearLayout>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1.5"
+            android:orientation="horizontal"
+            android:gravity="center"
+            >
+            <LinearLayout
+                android:id="@+id/ly_query_bankCard"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center"
+                android:paddingTop="@dimen/dpx006"
+                android:paddingBottom="@dimen/dpx006">
+                <TextView style="@style/text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingRight="@dimen/dpx006"
+                    android:text="银行卡"
                     />
                 <ImageView
                     android:layout_width="@dimen/dpx016"
@@ -43,7 +69,7 @@
             android:gravity="center"
             >
             <LinearLayout
-                android:id="@+id/ly_query_mobile"
+                android:id="@+id/ly_query_orderState"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
@@ -53,8 +79,8 @@
             <TextView style="@style/text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:paddingRight="@dimen/dpx016"
-                    android:text="手机号"
+                    android:paddingRight="@dimen/dpx006"
+                    android:text="状态"
                     />
                 <ImageView
                     android:layout_width="@dimen/dpx016"
@@ -65,12 +91,12 @@
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="1.5"
             android:orientation="horizontal"
             android:gravity="center"
             >
             <LinearLayout
-                android:id="@+id/ly_query_ordertime"
+                android:id="@+id/ly_query_orderTime"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
@@ -80,7 +106,7 @@
                 <TextView style="@style/text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:paddingRight="@dimen/dpx016"
+                    android:paddingRight="@dimen/dpx006"
                     android:text="交易时间"
                     />
                 <ImageView
@@ -93,7 +119,6 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -110,7 +135,30 @@
                 android:paddingTop="@dimen/dpx006"
                 android:paddingBottom="@dimen/dpx006">
                 <TextView style="@style/text"
-                    android:id="@+id/text_query_bankcard"
+                    android:id="@+id/text_query_transType"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingRight="@dimen/dpx016"
+                    />
+            </LinearLayout>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1.5"
+            android:orientation="horizontal"
+            android:gravity="center"
+            >
+            <LinearLayout
+
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center"
+                android:paddingTop="@dimen/dpx006"
+                android:paddingBottom="@dimen/dpx006">
+                <TextView style="@style/text"
+                    android:id="@+id/text_query_bankCard"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:paddingRight="@dimen/dpx016"
@@ -132,7 +180,7 @@
                 android:paddingTop="@dimen/dpx006"
                 android:paddingBottom="@dimen/dpx006">
                 <TextView style="@style/text"
-                    android:id="@+id/text_query_mobile"
+                    android:id="@+id/text_query_orderState"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:paddingRight="@dimen/dpx016"
@@ -142,7 +190,7 @@
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="1.5"
             android:orientation="horizontal"
             android:gravity="center"
             >
@@ -154,7 +202,7 @@
                 android:paddingTop="@dimen/dpx006"
                 android:paddingBottom="@dimen/dpx006">
                 <TextView style="@style/text"
-                    android:id="@+id/text_query_ordertime"
+                    android:id="@+id/text_query_orderTime"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:paddingRight="@dimen/dpx016"
