--- a/baseappresource/src/main/res/layout/dialog_stringwheel.xml
+++ b/baseappresource/src/main/res/layout/dialog_stringwheel.xml
@@ -17,7 +17,7 @@
             android:id="@+id/dialog_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="选择省份"
+            android:text="选择筛选条件"
             />
         <com.ruomm.base.view.wheel.wheelstring.WheelView
             android:id="@+id/wheel_string"
@@ -53,15 +53,15 @@
             android:background="@drawable/popdialog_btn_left"
             android:gravity="center"
             android:text="确定" />
-        <TextView
-            android:id="@+id/wheelbtn_clear"
-            style="@style/text.Middle"
-            android:layout_width="0dip"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="@drawable/popdialog_btn_center"
-            android:gravity="center"
-            android:text="清除" />
+        <!--<TextView-->
+            <!--android:id="@+id/wheelbtn_clear"-->
+            <!--style="@style/text.Middle"-->
+            <!--android:layout_width="0dip"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_weight="1"-->
+            <!--android:background="@drawable/popdialog_btn_center"-->
+            <!--android:gravity="center"-->
+            <!--android:text="清除" />-->
         <TextView
             android:id="@+id/wheelbtn_cancle"
             style="@style/text.Middle"
