--- a/app/src/main/res/layout/repayment_orderdetail_lay.xml
+++ b/app/src/main/res/layout/repayment_orderdetail_lay.xml
@@ -6,8 +6,185 @@
     android:orientation="vertical"
     android:paddingTop="@dimen/dpx016"
     android:background="@drawable/bg_mcht_content"
-
     >
+    <ScrollView
+        style="@style/listStyle"
+       >
+       <LinearLayout
+           android:paddingLeft="@dimen/dpx032"
+           android:paddingRight="@dimen/dpx032"
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:gravity="center_horizontal"
+           android:orientation="vertical">
+           <TextView
+               android:id="@+id/text_order_amount"
+               android:layout_marginTop="@dimen/dpx050"
+               style="@style/text.Large"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:text="218元"
+               />
+           <TextView
+               android:id="@+id/text_order_orderState"
+               android:layout_marginTop="@dimen/dpx050"
+               android:layout_marginBottom="@dimen/dpx050"
+               style="@style/text"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:text="已支付"
+               />
+           <RelativeLayout android:layout_width="match_parent"
+               android:layout_height="wrap_content"
+               android:background="@drawable/main_content_bg"
+               android:paddingTop="@dimen/dpx024"
+               android:paddingBottom="@dimen/dpx024"
+               android:paddingLeft="@dimen/dpx024"
+               android:paddingRight="@dimen/dpx024"
+               android:layout_marginBottom="@dimen/dpx016"
+               >
+               <TextView
+                   style="@style/text"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:layout_alignParentLeft="true"
+                   android:text="交易类型"
+                   />
+               <TextView
+                   android:id="@+id/text_order_tranType"
+                   style="@style/text"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                   android:text="消费"
+                   />
+           </RelativeLayout>
+           <RelativeLayout android:layout_width="match_parent"
+               android:layout_height="wrap_content"
+               android:background="@drawable/main_content_bg"
+               android:paddingTop="@dimen/dpx024"
+               android:paddingBottom="@dimen/dpx024"
+               android:paddingLeft="@dimen/dpx024"
+               android:paddingRight="@dimen/dpx024"
+               android:layout_marginBottom="@dimen/dpx016"
+               >
+               <TextView
+                   style="@style/text"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:layout_alignParentLeft="true"
+                   android:text="付款方"
+                   />
+               <TextView
+                   android:id="@+id/text_order_outcmp"
+                   style="@style/text"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:layout_alignParentRight="true"
+                   android:text="招商银行"
+                   />
+           </RelativeLayout>
+           <RelativeLayout android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:background="@drawable/main_content_bg"
+           android:paddingTop="@dimen/dpx024"
+           android:paddingBottom="@dimen/dpx024"
+           android:paddingLeft="@dimen/dpx024"
+           android:paddingRight="@dimen/dpx024"
+           android:layout_marginBottom="@dimen/dpx016"
+           >
+               <TextView
+                   style="@style/text"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:layout_alignParentLeft="true"
+                   android:text="收款方"
+                   />
+               <TextView
+                   android:id="@+id/text_order_incmp"
+                   style="@style/text"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:layout_alignParentRight="true"
+                   android:text="云闪付机构"
+                   />
+            </RelativeLayout>
+           <RelativeLayout android:layout_width="match_parent"
+               android:layout_height="wrap_content"
+               android:background="@drawable/main_content_bg"
+               android:paddingTop="@dimen/dpx024"
+               android:paddingBottom="@dimen/dpx024"
+               android:paddingLeft="@dimen/dpx024"
+               android:paddingRight="@dimen/dpx024"
+               android:layout_marginBottom="@dimen/dpx016"
+               >
+               <TextView
+                   style="@style/text"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:layout_alignParentLeft="true"
+                   android:text="附言"
+                   />
+               <TextView
+                   android:id="@+id/text_order_remark"
+                   style="@style/text"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:layout_alignParentRight="true"
+                   />
+           </RelativeLayout>
+           <RelativeLayout android:layout_width="match_parent"
+               android:layout_height="wrap_content"
+               android:background="@drawable/main_content_bg"
+               android:paddingTop="@dimen/dpx024"
+               android:paddingBottom="@dimen/dpx024"
+               android:paddingLeft="@dimen/dpx024"
+               android:paddingRight="@dimen/dpx024"
+               android:layout_marginBottom="@dimen/dpx016"
+               >
+               <TextView
+                   style="@style/text"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:layout_alignParentLeft="true"
+                   android:text="交易时间"
+                   />
+               <TextView
+                   android:id="@+id/text_order_time"
+                   style="@style/text"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:layout_alignParentRight="true"
+                   android:text="20170809"
+                   />
+           </RelativeLayout>
+           <RelativeLayout android:layout_width="match_parent"
+               android:layout_height="wrap_content"
+               android:background="@drawable/main_content_bg"
+               android:paddingTop="@dimen/dpx024"
+               android:paddingBottom="@dimen/dpx024"
+               android:paddingLeft="@dimen/dpx024"
+               android:paddingRight="@dimen/dpx024"
+               android:layout_marginBottom="@dimen/dpx016"
+               >
+               <TextView
+                   style="@style/text"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:layout_alignParentLeft="true"
+                   android:text="付款凭证号"
+                   />
+               <TextView
+                   android:id="@+id/text_order_finger"
+                   style="@style/text"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:layout_alignParentRight="true"
+                   android:text="20180909"
+                   />
+           </RelativeLayout>
+       </LinearLayout>
 
+    </ScrollView>
 
 </LinearLayout>
