--- a/app/src/main/res/layout/repayment_orders_lay.xml
+++ b/app/src/main/res/layout/repayment_orders_lay.xml
@@ -210,10 +210,23 @@
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
-    <ListView
-        android:id="@+id/mListView"
-        style="@style/listStyle.NoDivider"
-        ></ListView>
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <TextView
+            android:paddingTop="@dimen/dpx024"
+            android:id="@+id/text_tip"
+            style="@style/textLable"
+            android:layout_gravity="center_horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+        <ListView
+            android:id="@+id/mListView"
+            style="@style/listStyle.NoDivider"
+            ></ListView>
+
+    </FrameLayout>
+
 
 
 </LinearLayout>
