--- a/baseappresource/src/main/res/values/colors.xml
+++ b/baseappresource/src/main/res/values/colors.xml
@@ -56,6 +56,7 @@
     <color name="text_noraml">#333333</color>
     <color name="text_sub">#666666</color>
     <color name="text_lable">#999999</color>
+    <color name="bg_gray">#B0B0B0</color>
 
     <!-- MenutopView颜色重新设置 -->
     <color name="menutop_bottomline_color">#ffFC0C0C</color>
